# atlas-video

./: .dockerignore  .gitignore  AGENT.md  Dockerfile  Makefile  README.md  Specification.md  docker-entrypoint.sh  pyproject.toml  pytest.ini  todo.md
.github/workflows/: docker-publish.yml  publish.yml
docs/: atlas-video-functional-architecture-draft.md
skills/: SKILL.md
skills/atlas-video/rules/: cli-commands.md  docker.md  http-api.md  overview.md  python-api.md
skills/rules/: cli-commands.md  http-api.md  overview.md  python-api.md
src/atlas/: __init__.py  _meta.py  benchmark.py  chat_handler.py  cli.py  file_extension.py  gemini_client.py  logger.py  media_manager.py  prompts.py  server.py  settings.py  text_embedding.py  transcript.py  ui_router.py  utils.py  uuid.py  vector_store.py  video_processor.py
src/atlas/cli/: __init__.py  cmd_explore.py  cmd_media.py  cmd_server.py  helpers.py  parser.py  tasks.py
src/atlas/queue_example_with_sqlite/: __init__.py  example.py  notify.py  queue.py  store.py
src/atlas/task_queue/: __init__.py  commands.py  config.py  helpers.py  notify.py  queue.py  store.py  worker.py
src/atlas/ui/: index.html
src/atlas/ui/assets/: index-C9eBqb-z.css  index-CUXTAbrc.css  index-DfHghlP3.js  index-TLyB3tFR.js
src/atlas/vector_store/: __init__.py  base.py  video_chat.py  video_index.py
src/ui/: index.html
src/ui/assets/: index-BexDdGRa.css  index-CRxL_FNY.js  index-DMC7ToNM.js  index-Dc7O5TMP.js
tests/: __init__.py  conftest.py  helpers.py  test_chat_streaming.py  test_cli.py  test_integration.py  test_prompts.py  test_server.py  test_text_embedding.py  test_utils.py  test_vector_store.py  test_video_processor.py
webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webui/src/: App.svelte  app.css
webui/src/components/: Alert.svelte  ChatPanel.svelte  HowItWorks.svelte  NavBar.svelte  VideoSearch.svelte  VideoUpload.svelte
webui/src/lib/: api.ts  routing.ts  types.ts
webui/src/pages/: Dashboard.svelte  Extract.svelte  Home.svelte  Index.svelte  Queue.svelte  QueueTaskId.svelte  Runs.svelte  Search.svelte  Transcribe.svelte  VideoDetail.svelte  Videos.svelte
