[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-video"
version = "0.1.0"
description = "A multimodal insights engine for video understanding"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "VeedoAI", email = "hello@veedoai.com" }
]
keywords = [
    "video",
    "multimodal",
    "ai",
    "gemini",
    "transcription",
    "video-analysis",
    "vector-search",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "google-genai>=1.0.0",
    "groq>=0.4.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "zvec>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
atlas = "atlas.cli:main"

[project.urls]
Homepage = "https://github.com/veedoai/atlas"
Documentation = "https://github.com/veedoai/atlas#readme"
Repository = "https://github.com/veedoai/atlas"
Issues = "https://github.com/veedoai/atlas/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas"]

[tool.hatch.build.targets.sdist]
include = ["src/atlas", "README.md", "LICENSE"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"